feat: Add filters to TEDV audit endpoint