@@ -27,7 +27,7 @@
  */
 package org.hisp.dhis.common;
 
-import static java.util.Collections.singleton;
+import static org.hisp.dhis.utils.Assertions.assertIsEmpty;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -36,7 +36,6 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -83,7 +82,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
     private DataElementService dataElementService;
 
     @Autowired
-    private IdentifiableObjectManager identifiableObjectManager;
+    private IdentifiableObjectManager idObjectManager;
 
     @Autowired
     private UserService _userService;
@@ -100,9 +99,9 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
     {
         DataElement dataElementA = createDataElement( 'A' );
         dataElementService.addDataElement( dataElementA );
-        assertEquals( dataElementA, identifiableObjectManager.get( DataDimensionItem.DATA_DIMENSION_CLASSES,
+        assertEquals( dataElementA, idObjectManager.get( DataDimensionItem.DATA_DIMENSION_CLASSES,
             IdScheme.CODE, dataElementA.getCode() ) );
-        assertEquals( dataElementA, identifiableObjectManager.get( DataDimensionItem.DATA_DIMENSION_CLASSES,
+        assertEquals( dataElementA, idObjectManager.get( DataDimensionItem.DATA_DIMENSION_CLASSES,
             IdScheme.UID, dataElementA.getUid() ) );
     }
 
@@ -122,13 +121,13 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         dataElementService.addDataElementGroup( dataElementGroupB );
         long dataElementGroupIdB = dataElementGroupB.getId();
         assertEquals( dataElementA,
-            identifiableObjectManager.getObject( dataElementIdA, DataElement.class.getSimpleName() ) );
+            idObjectManager.getObject( dataElementIdA, DataElement.class.getSimpleName() ) );
         assertEquals( dataElementB,
-            identifiableObjectManager.getObject( dataElementIdB, DataElement.class.getSimpleName() ) );
+            idObjectManager.getObject( dataElementIdB, DataElement.class.getSimpleName() ) );
         assertEquals( dataElementGroupA,
-            identifiableObjectManager.getObject( dataElementGroupIdA, DataElementGroup.class.getSimpleName() ) );
+            idObjectManager.getObject( dataElementGroupIdA, DataElementGroup.class.getSimpleName() ) );
         assertEquals( dataElementGroupB,
-            identifiableObjectManager.getObject( dataElementGroupIdB, DataElementGroup.class.getSimpleName() ) );
+            idObjectManager.getObject( dataElementGroupIdB, DataElementGroup.class.getSimpleName() ) );
     }
 
     @Test
@@ -140,8 +139,8 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         dataElementService.addDataElement( dataElementB );
         Set<Class<? extends IdentifiableObject>> classes = ImmutableSet.<Class<? extends IdentifiableObject>> builder()
             .add( Indicator.class ).add( DataElement.class ).add( DataElementOperand.class ).build();
-        assertEquals( dataElementA, identifiableObjectManager.get( classes, dataElementA.getUid() ) );
-        assertEquals( dataElementB, identifiableObjectManager.get( classes, dataElementB.getUid() ) );
+        assertEquals( dataElementA, idObjectManager.get( classes, dataElementA.getUid() ) );
+        assertEquals( dataElementB, idObjectManager.get( classes, dataElementB.getUid() ) );
     }
 
     @Test
@@ -153,23 +152,23 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         dataElementService.addDataElement( dataElementB );
         OrganisationUnit unitA = createOrganisationUnit( 'A' );
         OrganisationUnit unitB = createOrganisationUnit( 'B' );
-        identifiableObjectManager.save( unitA );
-        identifiableObjectManager.save( unitB );
+        idObjectManager.save( unitA );
+        idObjectManager.save( unitB );
         Set<Class<? extends IdentifiableObject>> classes = ImmutableSet.<Class<? extends IdentifiableObject>> builder()
             .add( DataElement.class ).add( OrganisationUnit.class ).build();
         Set<String> uids = ImmutableSet.of( dataElementA.getUid(), unitB.getUid() );
-        assertEquals( 2, identifiableObjectManager.getByUid( classes, uids ).size() );
-        assertTrue( identifiableObjectManager.getByUid( classes, uids ).contains( dataElementA ) );
-        assertTrue( identifiableObjectManager.getByUid( classes, uids ).contains( unitB ) );
-        assertFalse( identifiableObjectManager.getByUid( classes, uids ).contains( dataElementB ) );
-        assertFalse( identifiableObjectManager.getByUid( classes, uids ).contains( unitA ) );
+        assertEquals( 2, idObjectManager.getByUid( classes, uids ).size() );
+        assertTrue( idObjectManager.getByUid( classes, uids ).contains( dataElementA ) );
+        assertTrue( idObjectManager.getByUid( classes, uids ).contains( unitB ) );
+        assertFalse( idObjectManager.getByUid( classes, uids ).contains( dataElementB ) );
+        assertFalse( idObjectManager.getByUid( classes, uids ).contains( unitA ) );
     }
 
     @Test
     void publicAccessSetIfNoUser()
     {
         DataElement dataElement = createDataElement( 'A' );
-        identifiableObjectManager.save( dataElement );
+        idObjectManager.save( dataElement );
         assertNotNull( dataElement.getPublicAccess() );
         assertFalse( AccessStringHelper.canRead( dataElement.getPublicAccess() ) );
         assertFalse( AccessStringHelper.canWrite( dataElement.getPublicAccess() ) );
@@ -178,31 +177,31 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
     @Test
     void getCount()
     {
-        identifiableObjectManager.save( createDataElement( 'A' ) );
-        identifiableObjectManager.save( createDataElement( 'B' ) );
-        identifiableObjectManager.save( createDataElement( 'C' ) );
-        identifiableObjectManager.save( createDataElement( 'D' ) );
-        assertEquals( 4, identifiableObjectManager.getCount( DataElement.class ) );
+        idObjectManager.save( createDataElement( 'A' ) );
+        idObjectManager.save( createDataElement( 'B' ) );
+        idObjectManager.save( createDataElement( 'C' ) );
+        idObjectManager.save( createDataElement( 'D' ) );
+        assertEquals( 4, idObjectManager.getCount( DataElement.class ) );
     }
 
     @Test
     void getEqualToName()
     {
         DataElement dataElement = createDataElement( 'A' );
-        identifiableObjectManager.save( dataElement );
-        assertNotNull( identifiableObjectManager.getByName( DataElement.class, "DataElementA" ) );
-        assertNull( identifiableObjectManager.getByName( DataElement.class, "DataElementB" ) );
-        assertEquals( dataElement, identifiableObjectManager.getByName( DataElement.class, "DataElementA" ) );
+        idObjectManager.save( dataElement );
+        assertNotNull( idObjectManager.getByName( DataElement.class, "DataElementA" ) );
+        assertNull( idObjectManager.getByName( DataElement.class, "DataElementB" ) );
+        assertEquals( dataElement, idObjectManager.getByName( DataElement.class, "DataElementA" ) );
     }
 
     @Test
     void getAllOrderedName()
     {
-        identifiableObjectManager.save( createDataElement( 'D' ) );
-        identifiableObjectManager.save( createDataElement( 'B' ) );
-        identifiableObjectManager.save( createDataElement( 'C' ) );
-        identifiableObjectManager.save( createDataElement( 'A' ) );
-        List<DataElement> dataElements = new ArrayList<>( identifiableObjectManager.getAllSorted( DataElement.class ) );
+        idObjectManager.save( createDataElement( 'D' ) );
+        idObjectManager.save( createDataElement( 'B' ) );
+        idObjectManager.save( createDataElement( 'C' ) );
+        idObjectManager.save( createDataElement( 'A' ) );
+        List<DataElement> dataElements = new ArrayList<>( idObjectManager.getAllSorted( DataElement.class ) );
         assertEquals( 4, dataElements.size() );
         assertEquals( "DataElementA", dataElements.get( 0 ).getName() );
         assertEquals( "DataElementB", dataElements.get( 1 ).getName() );
@@ -215,7 +214,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
     {
         User user = createUserAndInjectSecurityContext( true );
         DataElement dataElement = createDataElement( 'A' );
-        identifiableObjectManager.save( dataElement );
+        idObjectManager.save( dataElement );
         assertNotNull( dataElement.getCreatedBy() );
         assertEquals( user, dataElement.getCreatedBy() );
     }
@@ -225,7 +224,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
     {
         createUserAndInjectSecurityContext( false, "F_DATAELEMENT_PUBLIC_ADD" );
         DataElement dataElement = createDataElement( 'A' );
-        identifiableObjectManager.save( dataElement );
+        idObjectManager.save( dataElement );
         assertNotNull( dataElement.getPublicAccess() );
         assertTrue( AccessStringHelper.canRead( dataElement.getPublicAccess() ) );
         assertTrue( AccessStringHelper.canWrite( dataElement.getPublicAccess() ) );
@@ -236,7 +235,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
     {
         createUserAndInjectSecurityContext( false, "F_DATAELEMENT_PRIVATE_ADD" );
         DataElement dataElement = createDataElement( 'A' );
-        identifiableObjectManager.save( dataElement );
+        idObjectManager.save( dataElement );
         assertNotNull( dataElement.getPublicAccess() );
         assertFalse( AccessStringHelper.canRead( dataElement.getPublicAccess() ) );
         assertFalse( AccessStringHelper.canWrite( dataElement.getPublicAccess() ) );
@@ -247,7 +246,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
     {
         createUserAndInjectSecurityContext( false );
         assertThrows( CreateAccessDeniedException.class,
-            () -> identifiableObjectManager.save( createDataElement( 'A' ) ) );
+            () -> idObjectManager.save( createDataElement( 'A' ) ) );
     }
 
     @Test
@@ -256,7 +255,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         createUserAndInjectSecurityContext( false, "F_DATAELEMENT_PUBLIC_ADD" );
         DataElement dataElement = createDataElement( 'A' );
         dataElement.setPublicAccess( AccessStringHelper.DEFAULT );
-        identifiableObjectManager.save( dataElement, false );
+        idObjectManager.save( dataElement, false );
         assertFalse( AccessStringHelper.canRead( dataElement.getPublicAccess() ) );
         assertFalse( AccessStringHelper.canWrite( dataElement.getPublicAccess() ) );
     }
@@ -267,7 +266,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         createUserAndInjectSecurityContext( false, "F_DATAELEMENT_PUBLIC_ADD" );
         DataElement dataElement = createDataElement( 'A' );
         dataElement.setPublicAccess( AccessStringHelper.READ_WRITE );
-        identifiableObjectManager.save( dataElement, false );
+        idObjectManager.save( dataElement, false );
     }
 
     @Test
@@ -276,7 +275,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         createUserAndInjectSecurityContext( false, "F_DATAELEMENT_PRIVATE_ADD" );
         DataElement dataElement = createDataElement( 'A' );
         dataElement.setPublicAccess( AccessStringHelper.READ_WRITE );
-        assertThrows( CreateAccessDeniedException.class, () -> identifiableObjectManager.save( dataElement, false ) );
+        assertThrows( CreateAccessDeniedException.class, () -> idObjectManager.save( dataElement, false ) );
     }
 
     @Test
@@ -285,7 +284,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         createUserAndInjectSecurityContext( false, "F_DATAELEMENT_PRIVATE_ADD" );
         DataElement dataElement = createDataElement( 'A' );
         dataElement.setPublicAccess( AccessStringHelper.DEFAULT );
-        identifiableObjectManager.save( dataElement, false );
+        idObjectManager.save( dataElement, false );
     }
 
     @Test
@@ -294,9 +293,9 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         createUserAndInjectSecurityContext( false, "F_DATAELEMENT_PRIVATE_ADD" );
         DataElement dataElement = createDataElement( 'A' );
         dataElement.setPublicAccess( AccessStringHelper.DEFAULT );
-        identifiableObjectManager.save( dataElement, false );
+        idObjectManager.save( dataElement, false );
         dataElement.setPublicAccess( AccessStringHelper.READ_WRITE );
-        assertThrows( UpdateAccessDeniedException.class, () -> identifiableObjectManager.update( dataElement ) );
+        assertThrows( UpdateAccessDeniedException.class, () -> idObjectManager.update( dataElement ) );
     }
 
     @Test
@@ -305,7 +304,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         createUserAndInjectSecurityContext( false );
         DataElement dataElement = createDataElement( 'A' );
         dataElement.setPublicAccess( AccessStringHelper.READ_WRITE );
-        assertThrows( CreateAccessDeniedException.class, () -> identifiableObjectManager.save( dataElement, false ) );
+        assertThrows( CreateAccessDeniedException.class, () -> idObjectManager.save( dataElement, false ) );
     }
 
     @Test
@@ -313,24 +312,24 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
     {
         createUserAndInjectSecurityContext( false, "F_DATAELEMENT_PUBLIC_ADD", "F_USER_ADD" );
         User user = createUser( 'B' );
-        identifiableObjectManager.save( user );
+        idObjectManager.save( user );
         DataElement dataElement = createDataElement( 'A' );
-        identifiableObjectManager.save( dataElement );
+        idObjectManager.save( dataElement );
         dataElement.setOwner( user.getUid() );
         dataElement.setPublicAccess( AccessStringHelper.DEFAULT );
         sessionFactory.getCurrentSession().update( dataElement );
-        assertThrows( DeleteAccessDeniedException.class, () -> identifiableObjectManager.delete( dataElement ) );
+        assertThrows( DeleteAccessDeniedException.class, () -> idObjectManager.delete( dataElement ) );
     }
 
     @Test
     void objectsWithNoUser()
     {
-        identifiableObjectManager.save( createDataElement( 'A' ) );
-        identifiableObjectManager.save( createDataElement( 'B' ) );
-        identifiableObjectManager.save( createDataElement( 'C' ) );
-        identifiableObjectManager.save( createDataElement( 'D' ) );
-        assertEquals( 4, identifiableObjectManager.getCount( DataElement.class ) );
-        assertEquals( 4, identifiableObjectManager.getAll( DataElement.class ).size() );
+        idObjectManager.save( createDataElement( 'A' ) );
+        idObjectManager.save( createDataElement( 'B' ) );
+        idObjectManager.save( createDataElement( 'C' ) );
+        idObjectManager.save( createDataElement( 'D' ) );
+        assertEquals( 4, idObjectManager.getCount( DataElement.class ) );
+        assertEquals( 4, idObjectManager.getAll( DataElement.class ).size() );
     }
 
     @Test
@@ -338,21 +337,21 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
     {
         createUserAndInjectSecurityContext( false, "F_DATAELEMENT_PUBLIC_ADD", "F_USER_ADD" );
         User user = createUser( 'B' );
-        identifiableObjectManager.save( user );
-        identifiableObjectManager.save( createDataElement( 'A' ) );
-        identifiableObjectManager.save( createDataElement( 'B' ) );
-        identifiableObjectManager.save( createDataElement( 'C' ) );
-        identifiableObjectManager.save( createDataElement( 'D' ) );
-        assertEquals( 4, identifiableObjectManager.getAll( DataElement.class ).size() );
-        List<DataElement> dataElements = new ArrayList<>( identifiableObjectManager.getAll( DataElement.class ) );
+        idObjectManager.save( user );
+        idObjectManager.save( createDataElement( 'A' ) );
+        idObjectManager.save( createDataElement( 'B' ) );
+        idObjectManager.save( createDataElement( 'C' ) );
+        idObjectManager.save( createDataElement( 'D' ) );
+        assertEquals( 4, idObjectManager.getAll( DataElement.class ).size() );
+        List<DataElement> dataElements = new ArrayList<>( idObjectManager.getAll( DataElement.class ) );
         for ( DataElement dataElement : dataElements )
         {
             dataElement.setOwner( user.getUid() );
             dataElement.setPublicAccess( AccessStringHelper.DEFAULT );
             sessionFactory.getCurrentSession().update( dataElement );
         }
-        assertEquals( 0, identifiableObjectManager.getCount( DataElement.class ) );
-        assertEquals( 0, identifiableObjectManager.getAll( DataElement.class ).size() );
+        assertEquals( 0, idObjectManager.getCount( DataElement.class ) );
+        assertEquals( 0, idObjectManager.getAll( DataElement.class ).size() );
     }
 
     @Test
@@ -361,20 +360,20 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         User loginUser = createUserAndInjectSecurityContext( false, "F_DATAELEMENT_PUBLIC_ADD", "F_USER_ADD",
             "F_USERGROUP_PUBLIC_ADD" );
         User user = createUser( 'B' );
-        identifiableObjectManager.save( user );
+        idObjectManager.save( user );
         UserGroup userGroup = createUserGroup( 'A', Sets.newHashSet( loginUser ) );
-        identifiableObjectManager.save( userGroup );
+        idObjectManager.save( userGroup );
         user.getGroups().add( userGroup );
         loginUser.getGroups().add( userGroup );
-        identifiableObjectManager.save( loginUser );
-        identifiableObjectManager.save( user );
-        identifiableObjectManager.save( createDataElement( 'A' ) );
-        identifiableObjectManager.save( createDataElement( 'B' ) );
-        identifiableObjectManager.save( createDataElement( 'C' ) );
-        identifiableObjectManager.save( createDataElement( 'D' ) );
-        assertEquals( 4, identifiableObjectManager.getCount( DataElement.class ) );
-        assertEquals( 4, identifiableObjectManager.getAll( DataElement.class ).size() );
-        List<DataElement> dataElements = new ArrayList<>( identifiableObjectManager.getAll( DataElement.class ) );
+        idObjectManager.save( loginUser );
+        idObjectManager.save( user );
+        idObjectManager.save( createDataElement( 'A' ) );
+        idObjectManager.save( createDataElement( 'B' ) );
+        idObjectManager.save( createDataElement( 'C' ) );
+        idObjectManager.save( createDataElement( 'D' ) );
+        assertEquals( 4, idObjectManager.getCount( DataElement.class ) );
+        assertEquals( 4, idObjectManager.getAll( DataElement.class ).size() );
+        List<DataElement> dataElements = new ArrayList<>( idObjectManager.getAll( DataElement.class ) );
         for ( DataElement dataElement : dataElements )
         {
             dataElement.getSharing().setOwner( user );
@@ -382,9 +381,9 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
             dataElement.getSharing().addUserGroupAccess( new UserGroupAccess( userGroup, AccessStringHelper.READ ) );
             sessionFactory.getCurrentSession().update( dataElement );
         }
-        identifiableObjectManager.flush();
-        assertEquals( 4, identifiableObjectManager.getCount( DataElement.class ) );
-        assertEquals( 4, identifiableObjectManager.getAll( DataElement.class ).size() );
+        idObjectManager.flush();
+        assertEquals( 4, idObjectManager.getCount( DataElement.class ) );
+        assertEquals( 4, idObjectManager.getAll( DataElement.class ).size() );
     }
 
     @Test
@@ -394,14 +393,15 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         DataElement dataElementB = createDataElement( 'B' );
         DataElement dataElementC = createDataElement( 'C' );
         DataElement dataElementD = createDataElement( 'D' );
-        identifiableObjectManager.save( dataElementA );
-        identifiableObjectManager.save( dataElementB );
-        identifiableObjectManager.save( dataElementC );
-        identifiableObjectManager.save( dataElementD );
-        List<DataElement> ab = identifiableObjectManager.getByUid( DataElement.class,
-            Arrays.asList( dataElementA.getUid(), dataElementB.getUid() ) );
-        List<DataElement> cd = identifiableObjectManager.getByUid( DataElement.class,
-            Arrays.asList( dataElementC.getUid(), dataElementD.getUid() ) );
+
+        idObjectManager.save( dataElementA );
+        idObjectManager.save( dataElementB );
+        idObjectManager.save( dataElementC );
+        idObjectManager.save( dataElementD );
+        List<DataElement> ab = idObjectManager.getByUid( DataElement.class,
+            List.of( dataElementA.getUid(), dataElementB.getUid() ) );
+        List<DataElement> cd = idObjectManager.getByUid( DataElement.class,
+            List.of( dataElementC.getUid(), dataElementD.getUid() ) );
         assertTrue( ab.contains( dataElementA ) );
         assertTrue( ab.contains( dataElementB ) );
         assertFalse( ab.contains( dataElementC ) );
@@ -413,28 +413,54 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
     }
 
     @Test
-    void getAndValidateByUidTest()
+    void getByUidWithNull()
+    {
+        assertIsEmpty( idObjectManager.getByUid( DataElement.class, null ) );
+    }
+
+    @Test
+    void loadByUidTest()
     {
         DataElement dataElementA = createDataElement( 'A' );
         DataElement dataElementB = createDataElement( 'B' );
         DataElement dataElementC = createDataElement( 'C' );
-        identifiableObjectManager.save( dataElementA );
-        identifiableObjectManager.save( dataElementB );
-        identifiableObjectManager.save( dataElementC );
-        List<DataElement> ab = identifiableObjectManager.getAndValidateByUid( DataElement.class,
-            Arrays.asList( dataElementA.getUid(), dataElementB.getUid() ) );
+        idObjectManager.save( dataElementA );
+        idObjectManager.save( dataElementB );
+        idObjectManager.save( dataElementC );
+        List<DataElement> ab = idObjectManager.loadByUid( DataElement.class,
+            List.of( dataElementA.getUid(), dataElementB.getUid() ) );
         assertTrue( ab.contains( dataElementA ) );
         assertTrue( ab.contains( dataElementB ) );
         assertFalse( ab.contains( dataElementC ) );
     }
 
     @Test
-    void getAndValidateByUidExceptionTest()
+    void loadByUidNullTest()
+    {
+        assertIsEmpty( idObjectManager.loadByUid( DataElement.class, null ) );
+    }
+
+    @Test
+    void loadByUidExceptionTestA()
     {
         DataElement dataElementA = createDataElement( 'A' );
-        identifiableObjectManager.save( dataElementA );
-        IllegalQueryException ex = assertThrows( IllegalQueryException.class, () -> identifiableObjectManager
-            .getAndValidateByUid( DataElement.class, Arrays.asList( dataElementA.getUid(), "xhjG82jHaky" ) ) );
+        idObjectManager.save( dataElementA );
+        List<String> ids = List.of( dataElementA.getUid(), "xhjG82jHaky" );
+        IllegalQueryException ex = assertThrows( IllegalQueryException.class, () -> idObjectManager
+            .loadByUid( DataElement.class, ids ) );
+        assertEquals( ErrorCode.E1112, ex.getErrorCode() );
+    }
+
+    @Test
+    void loadByUidExceptionTestB()
+    {
+        OrganisationUnit ouA = createOrganisationUnit( 'A' );
+        OrganisationUnit ouB = createOrganisationUnit( 'B' );
+        idObjectManager.save( ouA );
+        idObjectManager.save( ouB );
+        List<String> ids = List.of( ouA.getUid(), "hy67TrE2nhK", ouB.getUid() );
+        IllegalQueryException ex = assertThrows( IllegalQueryException.class, () -> idObjectManager
+            .loadByUid( DataElement.class, ids ) );
         assertEquals( ErrorCode.E1112, ex.getErrorCode() );
     }
 
@@ -445,16 +471,16 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         DataElement dataElementB = createDataElement( 'B' );
         DataElement dataElementC = createDataElement( 'C' );
         DataElement dataElementD = createDataElement( 'D' );
-        identifiableObjectManager.save( dataElementA );
-        identifiableObjectManager.save( dataElementB );
-        identifiableObjectManager.save( dataElementC );
-        identifiableObjectManager.save( dataElementD );
-        List<String> uids = Arrays.asList( dataElementA.getUid(), dataElementC.getUid(), dataElementB.getUid(),
+        idObjectManager.save( dataElementA );
+        idObjectManager.save( dataElementB );
+        idObjectManager.save( dataElementC );
+        idObjectManager.save( dataElementD );
+        List<String> uids = List.of( dataElementA.getUid(), dataElementC.getUid(), dataElementB.getUid(),
             dataElementD.getUid() );
         List<DataElement> expected = new ArrayList<>(
-            Arrays.asList( dataElementA, dataElementC, dataElementB, dataElementD ) );
+            List.of( dataElementA, dataElementC, dataElementB, dataElementD ) );
         List<DataElement> actual = new ArrayList<>(
-            identifiableObjectManager.getOrdered( DataElement.class, IdScheme.UID, uids ) );
+            idObjectManager.getOrdered( DataElement.class, IdScheme.UID, uids ) );
         assertEquals( expected, actual );
     }
 
@@ -465,16 +491,16 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         DataElement dataElementB = createDataElement( 'B' );
         DataElement dataElementC = createDataElement( 'C' );
         DataElement dataElementD = createDataElement( 'D' );
-        identifiableObjectManager.save( dataElementA );
-        identifiableObjectManager.save( dataElementB );
-        identifiableObjectManager.save( dataElementC );
-        identifiableObjectManager.save( dataElementD );
-        List<String> codes = Arrays.asList( dataElementA.getCode(), dataElementC.getCode(), dataElementB.getCode(),
+        idObjectManager.save( dataElementA );
+        idObjectManager.save( dataElementB );
+        idObjectManager.save( dataElementC );
+        idObjectManager.save( dataElementD );
+        List<String> codes = List.of( dataElementA.getCode(), dataElementC.getCode(), dataElementB.getCode(),
             dataElementD.getCode() );
         List<DataElement> expected = new ArrayList<>(
-            Arrays.asList( dataElementA, dataElementC, dataElementB, dataElementD ) );
+            List.of( dataElementA, dataElementC, dataElementB, dataElementD ) );
         List<DataElement> actual = new ArrayList<>(
-            identifiableObjectManager.getOrdered( DataElement.class, IdScheme.CODE, codes ) );
+            idObjectManager.getOrdered( DataElement.class, IdScheme.CODE, codes ) );
         assertEquals( expected, actual );
     }
 
@@ -485,16 +511,16 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         DataElement dataElementB = createDataElement( 'B' );
         DataElement dataElementC = createDataElement( 'C' );
         DataElement dataElementD = createDataElement( 'D' );
-        identifiableObjectManager.save( dataElementA );
-        identifiableObjectManager.save( dataElementB );
-        identifiableObjectManager.save( dataElementC );
-        identifiableObjectManager.save( dataElementD );
-        List<String> uids = Arrays.asList( dataElementA.getUid(), dataElementC.getUid(), dataElementB.getUid(),
+        idObjectManager.save( dataElementA );
+        idObjectManager.save( dataElementB );
+        idObjectManager.save( dataElementC );
+        idObjectManager.save( dataElementD );
+        List<String> uids = List.of( dataElementA.getUid(), dataElementC.getUid(), dataElementB.getUid(),
             dataElementD.getUid() );
         List<DataElement> expected = new ArrayList<>(
-            Arrays.asList( dataElementA, dataElementC, dataElementB, dataElementD ) );
+            List.of( dataElementA, dataElementC, dataElementB, dataElementD ) );
         List<DataElement> actual = new ArrayList<>(
-            identifiableObjectManager.getByUidOrdered( DataElement.class, uids ) );
+            idObjectManager.getByUidOrdered( DataElement.class, uids ) );
         assertEquals( expected, actual );
     }
 
@@ -509,14 +535,14 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         dataElementB.setCode( "DE_B" );
         dataElementC.setCode( "DE_C" );
         dataElementD.setCode( "DE_D" );
-        identifiableObjectManager.save( dataElementA );
-        identifiableObjectManager.save( dataElementB );
-        identifiableObjectManager.save( dataElementC );
-        identifiableObjectManager.save( dataElementD );
-        List<DataElement> ab = identifiableObjectManager.getByCode( DataElement.class,
-            Arrays.asList( dataElementA.getCode(), dataElementB.getCode() ) );
-        List<DataElement> cd = identifiableObjectManager.getByCode( DataElement.class,
-            Arrays.asList( dataElementC.getCode(), dataElementD.getCode() ) );
+        idObjectManager.save( dataElementA );
+        idObjectManager.save( dataElementB );
+        idObjectManager.save( dataElementC );
+        idObjectManager.save( dataElementD );
+        List<DataElement> ab = idObjectManager.getByCode( DataElement.class,
+            List.of( dataElementA.getCode(), dataElementB.getCode() ) );
+        List<DataElement> cd = idObjectManager.getByCode( DataElement.class,
+            List.of( dataElementC.getCode(), dataElementD.getCode() ) );
         assertTrue( ab.contains( dataElementA ) );
         assertTrue( ab.contains( dataElementB ) );
         assertFalse( ab.contains( dataElementC ) );
@@ -537,12 +563,12 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         dataElementB.setCode( "DE_B" );
         dataElementC.setCode( "DE_C" );
         OrganisationUnit unit1 = createOrganisationUnit( 'A' );
-        identifiableObjectManager.save( unit1 );
-        identifiableObjectManager.save( dataElementA );
-        identifiableObjectManager.save( dataElementB );
-        identifiableObjectManager.save( dataElementC );
+        idObjectManager.save( unit1 );
+        idObjectManager.save( dataElementA );
+        idObjectManager.save( dataElementB );
+        idObjectManager.save( dataElementC );
         List<String> uids = Lists.newArrayList( dataElementA.getUid(), dataElementB.getUid(), dataElementC.getUid() );
-        List<DataElement> dataElements = identifiableObjectManager.getNoAcl( DataElement.class, uids );
+        List<DataElement> dataElements = idObjectManager.getNoAcl( DataElement.class, uids );
         assertEquals( 3, dataElements.size() );
         assertTrue( dataElements.contains( dataElementA ) );
         assertTrue( dataElements.contains( dataElementB ) );
@@ -555,11 +581,11 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         OrganisationUnit unit1 = createOrganisationUnit( 'A' );
         OrganisationUnit unit2 = createOrganisationUnit( 'B' );
         OrganisationUnit unit3 = createOrganisationUnit( 'C' );
-        identifiableObjectManager.save( unit1 );
-        identifiableObjectManager.save( unit2 );
-        identifiableObjectManager.save( unit3 );
+        idObjectManager.save( unit1 );
+        idObjectManager.save( unit2 );
+        idObjectManager.save( unit3 );
         Set<String> codes = Sets.newHashSet( unit2.getCode(), unit3.getCode() );
-        List<OrganisationUnit> units = identifiableObjectManager.getObjects( OrganisationUnit.class,
+        List<OrganisationUnit> units = idObjectManager.getObjects( OrganisationUnit.class,
             IdentifiableProperty.CODE, codes );
         assertEquals( 2, units.size() );
         assertTrue( units.contains( unit2 ) );
@@ -573,7 +599,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         DataElement dataElementB = createDataElement( 'B' );
         dataElementService.addDataElement( dataElementA );
         dataElementService.addDataElement( dataElementB );
-        Map<String, DataElement> map = identifiableObjectManager.getIdMap( DataElement.class, IdScheme.CODE );
+        Map<String, DataElement> map = idObjectManager.getIdMap( DataElement.class, IdScheme.CODE );
         assertEquals( dataElementA, map.get( "DataElementCodeA" ) );
         assertEquals( dataElementB, map.get( "DataElementCodeB" ) );
         assertNull( map.get( "DataElementCodeX" ) );
@@ -585,26 +611,26 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         User userA = createUser( 'A' );
         userService.addUser( userA );
         UserGroup userGroupA = createUserGroup( 'A', Sets.newHashSet( userA ) );
-        identifiableObjectManager.save( userGroupA );
+        idObjectManager.save( userGroupA );
         String userGroupUid = userGroupA.getUid();
         DataElement de = createDataElement( 'A' );
         Sharing sharing = new Sharing();
-        sharing.setUserGroupAccess( singleton( new UserGroupAccess( "rw------", userGroupA.getUid() ) ) );
+        sharing.setUserGroupAccess( Set.of( new UserGroupAccess( "rw------", userGroupA.getUid() ) ) );
         de.setSharing( sharing );
-        identifiableObjectManager.save( de, false );
-        de = identifiableObjectManager.get( de.getUid() );
+        idObjectManager.save( de, false );
+        de = idObjectManager.get( de.getUid() );
         assertEquals( 1, de.getSharing().getUserGroups().size() );
-        identifiableObjectManager.delete( userGroupA );
-        identifiableObjectManager.removeUserGroupFromSharing( userGroupUid );
+        idObjectManager.delete( userGroupA );
+        idObjectManager.removeUserGroupFromSharing( userGroupUid );
         dbmsManager.clearSession();
-        de = identifiableObjectManager.get( de.getUid() );
+        de = idObjectManager.get( de.getUid() );
         assertEquals( 0, de.getSharing().getUserGroups().size() );
     }
 
     @Test
     void testGetDefaults()
     {
-        Map<Class<? extends IdentifiableObject>, IdentifiableObject> objects = identifiableObjectManager.getDefaults();
+        Map<Class<? extends IdentifiableObject>, IdentifiableObject> objects = idObjectManager.getDefaults();
         assertEquals( 4, objects.size() );
         assertNotNull( objects.get( Category.class ) );
         assertNotNull( objects.get( CategoryCombo.class ) );
